--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,24 @@
+header{
+  height: 6em;
+  text-align:center;
+  /* padding: 20px; */
+  background-color: rgba(202, 201, 199, 0.219)
+}
+
+main{
+  text-align: center;
+  margin: 30px 0 30px 0;
+}
+section{
+  text-align:center;
+}
+p {
+  text-align: center;
+  padding: 30px;
+  overflow: scroll;
+}
+footer{
+  height:6em;
+  background-color: rgb(223, 223, 213);
+}
 
